--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
     <script src="JS/script.js"></script>
 </head>
 <body>
-    <main>
-        <div class="button">
-            <button id="button">Click</button>
-            <p id="result">random</p>
-        </div>
-    </main>
-</body>
+    <button onclick="myFunction()" class="button" id="select">Click</button>
+    <div class="main">
+      <p class="text" id="result"></p>
+    </div>
+    <footer class="footer"></footer>
+  </body>
 </html>
