--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script src="JS/script.js"></script>
 </head>
 <body>
-    <button onclick="myFunction()" class="button" id="select">Click</button>
-    <div class="main">
-      <p class="text" id="result"></p>
-    </div>
-    <footer class="footer"></footer>
-  </body>
+    <main>
+        <div class="button">
+            <button onclick="myFunction()" class="button" id="select">Click</button>
+            <p id="result">random</p>
+        </div>
+    </main>
+</body>
 </html>
