--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <main>
         <div class="button">
-            <button onclick="myFunction()" class="button" id="select">Click</button>
+            <button onclick="changeSaying()" class="button" id="select">Click</button>
             <p id="result">random</p>
         </div>
     </main>
